Fix a bug where it would flip depending on the axis